# GCATR

./: .gitignore  DESCRIPTION  NAMESPACE  README (copy).md  README.md  ToDo.txt  _DESCRIPTION  _old.Rhistory  headerReadme.txt  old.RData  test_file.r
GCATR_Report/: GCATR_Report.Rnw  GCATR_Report.tex
GCATR_Report_1/: GCATR_Report.Rnw  GCATR_Report.tex
GCATR_tikzgraph/: GCATR_tikzgraph
R/: BdaTools.R  ClusterAlgorithm.R  CodonTables.R  GraphPloter.R  PdfManager.R  RcppExports.R  zzz.R
anRpackage/: DESCRIPTION
anRpackage/R/: anRpackage-internal.R
anRpackage/data/: code.rda  code_2.rda  g.rda  res.binary.rda  res.rda  seq.rda
anRpackage/man/: code.Rd  code_1.Rd  code_2.Rd  g.Rd  res.Rd  res.binary.Rd  seq.Rd
data/: CircularCodeReport.Rmd  CircularCodeReport.Rnw  CircularCodeReport.tex  GCATR_tikzgraph.tex
example/: bdas.Rmd  check_for_circularity.Rmd  check_for_circularity.html  check_for_code_properties.Rmd  check_for_code_properties.html  check_for_code_properties.nb.html  check_for_code_properties.tex  genetic_functions.Rmd  genetic_functions.nb.html  graph_functions.Rmd  graph_functions.html  graph_functions.nb.html  min_code_example.Rmd  min_code_example.html  other_circular_functions.Rmd  other_circular_functions.html  other_circular_functions.nb.html
example/tex_sweave/: Makefile  min_tex.Rnw
example/tex_sweave/.output/: min_tex-concordance.tex  min_tex.tex
inst/tools/RDocToReadme/: MdManager.py  RdToMd.py  (+2 more)
man/: BDATools.Rd  CodonClusteringAlgorithm.Rd  GCATR-package.Rd  GCATR.Rd  add_bda.Rd  add_bda_rule.Rd  add_rule.Rd  cluster_add_weights.Rd  cluster_set_matrix_weight.Rd  code_as_unique_vector.Rd  code_as_vector.Rd  code_block_length.Rd  code_check_if_circular.Rd  code_check_if_cn_circular.Rd  code_check_if_code.Rd  code_check_if_comma_free.Rd  code_check_if_k_circular.Rd  code_check_if_self_complementary.Rd  code_check_if_tessera.Rd  code_factor_c3graph.Rd  code_factor_circles.Rd  code_factor_cycle.Rd  code_factor_graph.Rd  code_factor_longest_path.Rd  code_get_acid.Rd  code_get_all_amino_acids.Rd  code_get_all_circle_as_vector.Rd  code_get_all_cycles_as_vector.Rd  code_get_all_logest_path_as_vector.Rd  code_get_all_longest_path_as_vector.Rd  code_get_amino_acids.Rd  code_get_edges_and_vertices_of_gen_graph.Rd  code_get_one_circle_as_vector.Rd  code_get_one_cycles_as_vector.Rd  code_get_one_logest_path_as_vector.Rd  code_get_one_longest_path_as_vector.Rd  code_is_translatable.Rd  code_k_value.Rd  code_named_transform_tuples.Rd  code_path_end_vertices_miner.Rd  (+66 more)
src/: BDAToolsAdapter.cpp  ClusterAdapter.cpp  GenericCodeAdapter.cpp  GeneticCodeAdapter.cpp  GraphToolsAdapter.cpp  MainVectorAdapter.cpp  Makevars  Makevars.win  RAdapterUtils.cpp  RAdapterUtils.h  RcppExports.cpp  main.cpp
src/GCATCPP/: CMakeLists.txt  main_test.cpp
src/GCATCPP/bda/: BDATools.cpp  BDATools.h
src/GCATCPP/codes/: AbstractCode.cpp  AbstractCode.h  AbstractGenCode.cpp  AbstractGenCode.h  Acid.cpp  Acid.h  Alphabet.cpp  Alphabet.h  Code.cpp  Code.h  CodeFactory.h  GenCode.cpp  GenCode.h  SequenceFactory.h  StdGenCode.cpp  StdGenCode.h  TesseraCode.cpp  TesseraCode.h  TesseraTable.cpp  TesseraTable.h
src/GCATCPP/generator/: AbstractGenerator.cpp  AbstractGenerator.h  BaseValueGenerator.cpp  BaseValueGenerator.h
src/GCATCPP/genericCode/: CodonClusteringAlgorithm.cpp  CodonClusteringAlgorithm.h  CodonTranslTables.cpp  CodonTranslTables.h  KnownCodes.cpp  KnownCodes.h
src/GCATCPP/geneticCode/: CodonClusteringAlgorithm.cpp  CodonClusteringAlgorithm.h  CodonTranslTables.cpp  CodonTranslTables.h
src/GCATCPP/graph/: C3Graph.cpp  C3Graph.h  Edge.cpp  Edge.h  Graph.cpp  Graph.h  Vertex.cpp  Vertex.h
src/GCATCPP/helper/: AbstractErrorManager.cpp  AbstractErrorManager.h  ErrorManager.cpp  ErrorManager.h  FileManager.cpp  FileManager.h  StringUtils.h
src/GCATCPP/interfaces/: AbstractTranslatable.cpp  AbstractTranslatable.h  AbstractTupleContainer.cpp  AbstractTupleContainer.h
src/GCATCPP/miner/: CircleMiner.cpp  CircleMiner.h  LongestPathMiner.cpp  LongestPathMiner.h  PathEndVerticesMiner.cpp  PathEndVerticesMiner.h  kCircularityMiner.cpp  kCircularityMiner.h
src/GCATCPP/modification/: AbstractModifier.cpp  AbstractModifier.h  ShiftTuples.cpp  ShiftTuples.h  TransformTuples.cpp  TransformTuples.h
src/GCATCPP/seqences/: Sequence.cpp  Sequence.h
src/GCATCPP/sequences/: Sequence.cpp  Sequence.h
src/GCATCPP/tester/: AbstractTester.cpp  AbstractTester.h  C_n.cpp  C_n.h  Circular.cpp  Circular.h  CommaFree.cpp  CommaFree.h  KCircular.cpp  KCircular.h  SelfComplimentary.cpp  SelfComplimentary.h
src/GCATCPP/unit_tests/: acidTest.cpp  bdaTest.cpp  binaryTest.cpp  c3GraphTest.cpp  circular.cpp  cnCircularTest.cpp  codeCompare.cpp  codeFactoryTester.cpp  codeTableTest.cpp  codeTestTest.cpp  commaFreeTest.cpp  generatorTest.cpp  graphTest.cpp  graphTestSize.cpp  kCircularTest.cpp  minerCircularTest.cpp  minerPathTest.cpp  modificationTest.cpp  selfComplementaryTest.cpp  seqTest.cpp  sequenceTest.cpp  tesseraTest.cpp  test_utils.cpp
src/GCATCPP/unit_tests/asserts/: TEST.csv  TEST.xlsx  TEST_1.csv  correct_code.txt  wrong_1_code.txt  wrong_2_code.txt
test/: test_RcppExports.R  test_RcppExports_check_code_properties.R  test_RcppExports_remaining_circular_funtions.R
tests/: testthat.R
tests/testthat/: test.RcppExports_check_code_properties.R  test.RcppExports_graph_functions.R  test.RcppExports_remaining_circular_functions.R  test.bda_functions.R  test.genetic_functions.R
(+7 files in other folders)
